src/test/resources/fail/basic/Problem3.scala
package fail.basic

import forcedtodo.todo

class Problem3 {
  @todo("Something else", until = "1990-08-04")
  def foo = ???
}


